--- a/src/boatprototype/HomePage.form
+++ b/src/boatprototype/HomePage.form
@@ -130,7 +130,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="adminLbl">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Locker"/>
+            <Property name="text" type="java.lang.String" value="Admin"/>
             <Property name="iconTextGap" type="int" value="0"/>
           </Properties>
           <Events>
