--- a/src/boatprototype/HomePage.form
+++ b/src/boatprototype/HomePage.form
@@ -31,7 +31,7 @@
                   <Component id="jLayeredPane1" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" pref="105" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="298" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
