--- a/src/boatprototype/Admin.form
+++ b/src/boatprototype/Admin.form
@@ -66,7 +66,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                       <Component id="memberAdminBtn" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="memberReport" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
